src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sparkjava
  namespace: sparkjava
  labels:
    app:  sparkjavva
spec:
  selector:
    matchLabels:
      app: sparkjava
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  sparkjava
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  sparkjava
        image:  sparkjava:latest
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 200Mi
